[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdpy"
version = "0.23"
description = "Brain decoder toolbox for Python"
authors = [
    { name = "Shuntaro C. Aoki", email = "s_aoki@i.kyoto-u.ac.jp" }
]
readme = "README.md"
requires-python = ">= 3.6, < 3.12"
license = { file = "LICENSE" }
keywords = ["neuroscience", "neuroimaging", "brain decoding", "fmri", "machine learning"]

dependencies = [
    "numpy>=1.20",
    "scipy",
    "scikit-learn",
    "h5py",
    "hdf5storage",
    "pyyaml",
    "pandas",
    "tqdm",
]

[project.optional-dependencies]
caffe = [
    "Pillow",
]
torch = [
    "torch",
    "torchvision",
    "Pillow"
]
fig = [
    "matplotlib",
    "Pillow"
]
mri = [
    "numpy<1.24",
    "nibabel==3.2",
    "nipy"
]
pipeline = [
    "hydra-core",
    "omegaconf"
]
all = [
    "bdpy[caffe]",
    "bdpy[torch]",
    "bdpy[fig]",
    "bdpy[mri]",
    "bdpy[pipeline]"
]
dev = [
    "bdpy[all]",
    "fastl2lir"
]

[project.urls]
Homepage = "https://github.com/KamitaniLab/bdpy"
Repository = "https://github.com/KamitaniLab/bdpy"
"Bug Tracker" = "https://github.com/KamitaniLab/bdpy/issues"

[tool.rye]
managed = true
dev-dependencies = [
    "bdpy[dev]",
    "jupyter",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["bdpy"]

[tool.hatch.build.targets.sdist]
only-include = ["bdpy"]

[tool.ruff]
select = ["E", "F", "N", "D", "ANN", "B", "NPY", "RUF"]
ignore = ["E501", "ANN101", "D213", "D203"]
exclude = ["test"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-annotations]
mypy-init-return = true

[tool.pylint]
disable = "line-too-long"
